--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,7 +16,12 @@ jobs:
           # which is useful for controlling the length of the automated changelog
           fetch-depth: 50
 
-      - name: Package and release
-        uses: BigWigsMods/packager@master
+      - name: Package and release (Classic)
+        uses: BigWigsMods/packager@master -g classic
+        env:
+          CF_API_KEY: ${{ secrets.CF_API_KEY }}
+
+      - name: Package and release (TBC)
+        uses: BigWigsMods/packager@master -g bcc
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
