--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,11 +17,15 @@ jobs:
           fetch-depth: 50
 
       - name: Package and release (Classic)
-        uses: BigWigsMods/packager@master -g classic
+        uses: BigWigsMods/packager@master
+        with:
+          args: -g classic
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
 
       - name: Package and release (TBC)
-        uses: BigWigsMods/packager@master -g bcc
+        uses: BigWigsMods/packager@master
+        with:
+          args: -g bcc
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
