--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,7 +3,10 @@ name: Package addon
 
 on:
   push:
-
+    branches:
+      - master
+    tags:
+      - "*"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,8 +19,14 @@ jobs:
           # which is useful for controlling the length of the automated changelog
           fetch-depth: 50
 
+      - name: Luacheck
+        uses: BigWigsMods/actions/luacheck@master
+        with:
+          args: -q
+
       - name: Package and release (Classic)
         uses: BigWigsMods/packager@master
+        if: ${{ github.event_name != 'pull_request' }}
         with:
           args: -g classic
         env:
@@ -25,6 +34,7 @@ jobs:
 
       - name: Package and release (TBC)
         uses: BigWigsMods/packager@master
+        if: ${{ github.event_name != 'pull_request' }}
         with:
           args: -g bcc
         env:
