--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Checkout addon
         uses: actions/checkout@v1
@@ -16,8 +15,15 @@ jobs:
           # which is useful for controlling the length of the automated changelog
           fetch-depth: 50
 
+      - name: Luacheck
+        uses: BigWigsMods/actions/luacheck@master
+        with:
+          args: -q
+          annotate: warning
+
       - name: Package and release (Classic)
         uses: BigWigsMods/packager@master
+        if: github.ref == 'refs/heads/master'
         with:
           args: -g classic
         env:
@@ -25,6 +31,7 @@ jobs:
 
       - name: Package and release (TBC)
         uses: BigWigsMods/packager@master
+        if: github.ref == 'refs/heads/master'
         with:
           args: -g bcc
         env:
